[package]
name = "axia-cli"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
description = "Axia Relay-chain Client Node"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.0", features = ["derive"], optional = true }
log = "0.4.13"
thiserror = "1.0.30"
futures = "0.3.21"

service = { package = "axia-service", path = "../node/service", default-features = false, optional = true }
axia-node-core-pvf = { path = "../node/core/pvf", optional = true }
axia-performance-test = { path = "../node/test/performance-test", optional = true }

sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", optional = true , branch = "c92f69d" }
try-runtime-cli = { git = "https://github.com/axtend/axlib", optional = true , branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", optional = true , branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", optional = true , branch = "c92f69d" }
axia-node-metrics = { path = "../node/metrics" }
sc-tracing = { git = "https://github.com/axtend/axlib", optional = true , branch = "c92f69d" }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/axiatech/axlib/pull/6745
sp-trie = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "axia-native"]
wasmtime = ["sc-cli/wasmtime"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"axia-node-core-pvf",
	"axia-performance-test",
]
runtime-benchmarks = ["service/runtime-benchmarks", "axia-node-metrics/runtime-benchmarks"]
trie-memory-tracker = ["sp-trie/memory-tracker"]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime"]
fast-runtime = ["service/fast-runtime"]

# Configure the native runtimes to use. Axia is enabled by default.
#
# Validators require the native runtime currently
axia-native = ["service/axia-native"]
axctest-native = ["service/axctest-native"]
alphanet-native = ["service/alphanet-native"]
betanet-native = ["service/betanet-native"]

malus = ["full-node", "service/malus"]
runtime-metrics = ["service/runtime-metrics", "axia-node-metrics/runtime-metrics"]
