[package]
name = "axia-erasure-coding"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
axia-primitives = { path = "../primitives" }
axia-node-primitives = { package = "axia-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
trie = { package = "sp-trie", git = "https://github.com/axtend/axlib", branch = "c92f69d" }
thiserror = "1.0.30"
