[package]
name = "axia-erasure-coding"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
axia-primitives = { path = "../primitives" }
axia-node-primitives = { package = "axia-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
trie = { package = "sp-trie", git = "https://github.com/axtend/axlib", branch = "axlib" }
thiserror = "1.0.30"
