[package]
name = "axia-primitives"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.136", optional = true, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["bit-vec", "derive"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
inherents = { package = "sp-inherents", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-consensus-slots = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", optional = true , branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-std = { package = "sp-std", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-arithmetic = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-authority-discovery = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
axia-allychain = { path = "../allychain", default-features = false }
axia-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
hex-literal = "0.3.4"
parity-util-mem = { version = "0.10.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"parity-util-mem",
	"axia-allychain/std",
	"axia-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
runtime-benchmarks = []
