[package]
name = "polkadot-rpc"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus-babe-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus-epochs = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-finality-grandpa = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-finality-grandpa-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-sync-state-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-mmr-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
beefy-gadget = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
beefy-gadget-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
