[package]
name = "axia-rpc"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
axia-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus-babe-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus-epochs = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-finality-grandpa = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-finality-grandpa-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-sync-state-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-rpc-system = { package = "axlib-frame-rpc-system", git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-mmr-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }
beefy-gadget = { git = "https://github.com/axtend/axlib", branch = "axlib" }
beefy-gadget-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
