[package]
name = "axia-statement-table"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
primitives = { package = "axia-primitives", path = "../primitives" }
