[package]
name = "xcm"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
description = "The basic XCM datastructures."
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.2"
axia-scale-codec = { version = "2.3.1", default-features = false, features = [ "derive" ] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
derivative = {version = "2.2.0", default-features = false, features = [ "use_core" ] }
log = { version = "0.4.14", default-features = false }
xcm-procedural = { path = "procedural" }

[features]
default = ["std"]
wasm-api = []
runtime-benchmarks = []
std = [
	"axia-scale-codec/std",
	"scale-info/std",
]
