[package]
name = "test-allychains"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
description = "Integration tests using the test-allychains"
edition = "2018"

[dependencies]
tiny-keccak = "2.0.2"
axia-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }

adder = { package = "test-allychain-adder", path = "adder" }
halt = { package = "test-allychain-halt", path = "halt" }

[dev-dependencies]
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["std"]
std = ["adder/std", "halt/std"]
