[package]
name = "polkadot-client"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-storage = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-authority-discovery = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-finality-grandpa = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

sc-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }

pallet-mmr-primitives = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

beefy-primitives = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "kusama-runtime/runtime-metrics",
    "westend-runtime/runtime-metrics",
    "polkadot-runtime/runtime-metrics",
]
