[package]
name = "axia-client"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }

sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-storage = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-authority-discovery = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-finality-grandpa = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }

sc-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

pallet-mmr-primitives = { git = "https://github.com/axtend/axlib", branch = "axlib" }

beefy-primitives = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Axia Runtimes
axia-runtime = { path = "../../runtime/axia", optional = true }
axctest-runtime = { path = "../../runtime/axctest", optional = true }
alphanet-runtime = { path = "../../runtime/alphanet", optional = true }
betanet-runtime = { path = "../../runtime/betanet", optional = true }

axia-primitives = { path = "../../primitives" }

[features]
default = ["axia"]
axia = ["axia-runtime"]
axctest = ["axctest-runtime"]
betanet = ["betanet-runtime"]
alphanet = ["alphanet-runtime"]
runtime-metrics = [
    "betanet-runtime/runtime-metrics",
    "axctest-runtime/runtime-metrics",
    "alphanet-runtime/runtime-metrics",
    "axia-runtime/runtime-metrics",
]
