[package]
name = "axia-node-jaeger"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "Axia Jaeger primitives"

[dependencies]
async-std = "1.8.0"
mick-jaeger = "0.1.7"
lazy_static = "1.4"
parking_lot = "0.11.1"
axia-primitives = { path = "../../primitives" }
axia-node-primitives = { path = "../primitives" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
thiserror = "1.0.30"
log = "0.4.13"
parity-scale-codec = { version = "2.3.1", default-features = false }
