[package]
name = "axia-test-malus"
description = "Misbehaving nodes for local testnets, system and Simnet tests."
license = "GPL-3.0-only"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"
publish = false

[[bin]]
name = "malus"
path = "src/malus.rs"

[dependencies]
axia-cli = { path = "../../cli", default-features = false, features = ["cli", "malus"] }
axia-node-subsystem = { path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-node-subsystem-types = { path = "../subsystem-types" }
axia-node-core-dispute-coordinator = { path = "../core/dispute-coordinator" }
axia-node-core-candidate-validation = { path = "../core/candidate-validation" }
axia-node-core-backing = { path = "../core/backing" }
axia-node-primitives = { path = "../primitives" }
axia-primitives = { path = "../../primitives" }
axia-node-core-pvf = { path = "../core/pvf" }
parity-util-mem = { version = "0.10.0", default-features = false, features = ["jemalloc-global"] }
color-eyre = { version = "0.6.0", default-features = false }
assert_matches = "1.5"
async-trait = "0.1.52"
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
clap = { version = "3.0", features = ["derive"] }
futures = "0.3.21"
futures-timer = "3.0.2"
tracing = "0.1.26"

[features]
default = []

[dev-dependencies]
axia-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
futures = { version = "0.3.21", features = ["thread-pool"] }
