[package]
name = "polkadot-node-metrics"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "Subsystem metric helpers"

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
tracing = "0.1.29"

metered-channel = { path = "../metered-channel" }

# Both `sc-service` and `sc-cli` are required by runtime metrics `logger_hook()`.
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

axlib-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
codec = { package = "axia-scale-codec", version = "2.2.0" }
primitives = { package = "polkadot-primitives", path = "../../primitives/" }
bs58 = { version = "0.4.0", features = ["alloc"] }
log = "0.4.13"

[dev-dependencies]
assert_cmd = "2.0.4"
nix = "0.23.1"
tempfile = "3.2.0"
hyper = { version = "0.14.17", default-features = false, features = ["http1", "tcp"] }
tokio = "1.13"
polkadot-test-service = { path = "../test/service", features=["runtime-metrics"]}
axlib-test-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
prometheus-parse = {version = "0.2.2"}

[features]
default = []
runtime-metrics = []
runtime-benchmarks = []
