[package]
name = "axia-overseer"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client-api", git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
futures = "0.3.21"
futures-timer = "3.0.2"
parking_lot = "0.11.1"
axia-node-network-protocol = { path = "../network/protocol" }
axia-node-primitives = { path = "../primitives" }
axia-node-subsystem-types = { path = "../subsystem-types" }
axia-node-metrics = { path = "../metrics" }
axia-primitives = { path = "../../primitives" }
axia-overseer-gen = { path = "./overseer-gen" }
tracing = "0.1.29"
lru = "0.7"
parity-util-mem = { version = ">= 0.10.1", default-features = false }

[dev-dependencies]
metered-channel = { path = "../metered-channel" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
futures = { version = "0.3.21", features = ["thread-pool"] }
femme = "2.1.1"
assert_matches = "1.4.0"
test-helpers = { package = "axia-primitives-test-helpers", path = "../../primitives/test-helpers" }

[features]
default = []
