[package]
name = "axia-node-primitives"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
bounded-vec = "0.5"
futures = "0.3.21"
axia-primitives = { path = "../../primitives" }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-application-crypto = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus-vrf = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus-babe = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-maybe-compressed-blob = { git = "https://github.com/axtend/axlib", branch = "axlib" }
axia-allychain = { path = "../../allychain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = "0.9.2"

[dev-dependencies]
axia-erasure-coding = { path = "../../erasure-coding" }
